get swagger for limit and static
