# internal/features/limit/transport/limitDTO.go
@@ -6,17 +6,17 @@ import (
 	core_domain "github.com/Hodorev-Evgeny/ExpensesTracker/internal/core/domain"
 )
 
-type limitDTO struct {
-	Duration    time.Time `json:"duration" validate:"required"`
-	AmountLimit int       `json:"amount_limit" validate:"required"`
+type LimitDTO struct {
+	Duration    time.Time `json:"duration" validate:"required" example:"2006-01-02T15:04:05-07:00"`
+	AmountLimit int       `json:"amount_limit" validate:"required" example:"1000"`
 }
 
 type LimitResponse struct {
 	ID int `json:"id"`
-	limitDTO
+	LimitDTO
 }
 
-func LimitResponseToDomain(req limitDTO) core_domain.Limit {
+func LimitResponseToDomain(req LimitDTO) core_domain.Limit {
 	return core_domain.CreateUnincelizeLimit(
 		req.Duration,
 		req.AmountLimit,
@@ -30,7 +30,7 @@ func LimitResponseToPatch(req PatchLimit) core_domain.PatchLimit {
 func LimitDomainToResponse(limit core_domain.Limit) LimitResponse {
 	return LimitResponse{
 		ID: limit.ID,
-		limitDTO: limitDTO{
+		LimitDTO: LimitDTO{
 			Duration:    limit.Duration,
 			AmountLimit: limit.AmountLimit,
 		},
